# whatsmyip

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
k8s/: whatsmyip.yaml
src/: lib.rs  main.rs
