[package]
name = "whatsmyip"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
ipnet = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
